fix: security hardening — closes #2 #3 #4 #5 #6 #7 #8 #9
Critical fixes:
- #2: Authenticate /users/sync with internal secret
- #3: SSRF protection in scanner (block private IPs/internal hosts)
- #4: Prompt injection mitigation (system prompt + content sanitization)
- #5: Fail-fast on insecure JWT secret defaults
- #6: Sanitize webhook error messages
- #7: Add security headers to nginx
- #8: Generic error messages in scanner
- #9: Input validation bounds on all endpoints

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ POSTGRES_DB=deadinternet
 NEXTAUTH_URL=https://deadinternet.report
 NEXTAUTH_SECRET=generate-with-openssl-rand-base64-32
 
+# Internal API secret for server-to-server calls
+# If not set, falls back to NEXTAUTH_SECRET
+INTERNAL_API_SECRET=
+
 # Google OAuth (https://console.cloud.google.com/apis/credentials)
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
@@ -42,6 +46,11 @@ ANTHROPIC_API_KEY=sk-ant-...
 REDIS_URL=redis://redis:6379/0
 API_URL=http://backend:8000
 NEXT_PUBLIC_API_URL=http://localhost:8000
+
+# ---- JWT ----
+# MUST be set — app will refuse to start with default/empty values
+# Use same value as NEXTAUTH_SECRET
+JWT_SECRET=generate-with-openssl-rand-base64-32
 
 # ---- Ports ----
 HTTP_PORT=80
