--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -1,6 +1,8 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = postgresql+asyncpg://deadinet:deadinet@db:5432/deadinternet
+# URL is set dynamically from app.core.config.settings in env.py
+# Do NOT hardcode credentials here
+sqlalchemy.url = 
 
 [loggers]
 keys = root,sqlalchemy,alembic
