--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,6 +15,17 @@ http {
     # Rate limiting zone
     limit_req_zone $binary_remote_addr zone=api:10m rate=30r/s;
 
+    # Hide nginx version
+    server_tokens off;
+
+    # Security headers (applied to all responses)
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-Frame-Options "DENY" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://lh3.googleusercontent.com https://avatars.githubusercontent.com; connect-src 'self' https://checkout.stripe.com;" always;
+
     upstream frontend {
         server frontend:3000;
     }
@@ -35,6 +46,18 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Block direct access to internal sync endpoint from outside
+            location = /api/v1/users/sync {
+                # Only allow from internal Docker network
+                allow 172.16.0.0/12;
+                allow 10.0.0.0/8;
+                allow 192.168.0.0/16;
+                deny all;
+                proxy_pass http://backend;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+            }
         }
 
         # Health check -> FastAPI
@@ -42,7 +65,7 @@ http {
             proxy_pass http://backend;
         }
 
-        # API docs (dev only)
+        # API docs (dev only — restrict in prod)
         location /docs {
             proxy_pass http://backend;
         }
